--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.2",
+    "global": "^4.4.0",
     "next": "^14.2.13",
     "react": "^18",
     "react-countdown": "^2.3.5",
