--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.7",
     "bootstrap": "^5.0.2",
     "global": "^4.4.0",
     "next": "^14.2.13",
@@ -19,6 +20,7 @@
     "react-modal-video": "^2.0.1",
     "react-multi-date-picker": "^4.4.1",
     "react-slick": "^0.30.2",
+    "recoil": "^0.7.7",
     "sass": "^1.72.0",
     "slick": "^1.12.2",
     "swiper": "^11.1.0",
