--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.7",
     "bootstrap": "^5.0.2",
+    "formik": "^2.4.6",
     "global": "^4.4.0",
     "next": "^14.2.16",
     "react": "^18",
@@ -24,6 +25,7 @@
     "sass": "^1.72.0",
     "slick": "^1.12.2",
     "swiper": "^11.1.0",
-    "wowjs": "^1.1.3"
+    "wowjs": "^1.1.3",
+    "yup": "^1.4.0"
   }
 }
