--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.0.2",
     "formik": "^2.4.6",
     "global": "^4.4.0",
+    "mapbox-gl": "^3.7.0",
     "next": "^14.2.16",
     "react": "^18",
     "react-countdown": "^2.3.5",
