--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-multi-date-picker": "^4.4.1",
     "react-slick": "^0.30.2",
     "recoil": "^0.7.7",
+    "saas": "^1.0.0",
     "sass": "^1.72.0",
     "slick": "^1.12.2",
     "swiper": "^11.1.0",
