--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.0.2",
     "formik": "^2.4.6",
     "global": "^4.4.0",
+    "js-cookie": "^3.0.5",
     "mapbox-gl": "^3.7.0",
     "next": "^14.2.16",
     "react": "^18",
